--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
     <div class="row">
 
       <div class="col-xs-6">
-        <h2>Sobre nostros</h2>
+        <h2>Sobre nosotros</h2>
         Nuestra misión en esta vida y en esta página es dar a conocer las series de animación que están marcando un nuevo camino en para el resto de la animación.
         <br>
         Nos esforzamos por colocar en esta lista todo lo necesario para que comprendáis por qué creemos que estamos en la <b>edad de oro de la animacion</b>.
